disabled fixed image on mobile and tablet

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   font-family: "lato", sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-color: darkcyan; }
+  background-color: #f7f7f7; }
 
 html {
   box-sizing: border-box;
@@ -156,11 +156,14 @@ html {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/annie-spratt-QckxruozjRg-unsplash.jpg);
   background-size: cover;
   background-position: top;
-  background-attachment: fixed;
+  background-attachment: scroll;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media only screen and (min-width: 1100px) {
+    .landing {
+      background-attachment: fixed; } }
   .landing__header {
     text-align: center;
     font-size: 6rem;
@@ -184,8 +187,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-top: -19rem; }
+  justify-content: center; }
   .about__content {
     height: 100%;
     display: flex;
