--- a/sass/base.scss
+++ b/sass/base.scss
@@ -30,7 +30,7 @@ body {
     font-family: "lato", sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    background-color: darkcyan;
+    background-color: $bg-light;
 }
 
 html {
